<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World!</string>
    <string name="app_name">柠檬微博</string>
    <string name="buttonname">ok</string>
   
    <string name="selfInfo">我的资料</string>
    <string name="home">首页</string>
    <string name="message">信息</string>
    <string name="square">广场</string>
    <string name="more">更多</string>
    <string name="blackList">黑名单</string>
    <string name="fans">粉丝</string>
    <string name="weibo">微博</string>
    <string name="favorite">收藏</string>
    <string name="address">地址：</string>
    <string name="loginName">登录名：</string>
    <string name="unattention">取消关注</string>
    <string name="topic">话题</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="accountManage">帐号管理</string>
    <string name="readMode">浏览模式</string>
    <string name="official">官方微博</string>
    <string name="feedback">意见反馈</string>
    <string name="version">检测新版本</string>
    <string name="comment">评论</string>
    <string name="privateLetter">私信</string>
    <string name="atme">\@我</string>
    <string name="athim">\@他</string>
    <string name="searchWeibo">搜索微博</string>
    <string name="searchPeople">找人</string>
    <string name="edit">编辑</string>
    <string name="updateWeibo">发表新微博</string>
    <string name="send">发送</string>
    <string name="saySth">说点儿什么吧...</string>
    <string name="rt_sametime_comment">同时做为评论发布</string>
    <string name="comment_sametime_update">同时发一条微博</string>
    <string name="redirectWeibo">转发微博</string>
    <string name="commentWeibo">评论微博</string>
    <string name="note">注意</string>
    <string name="isSave">微博尚未发送，是否保存？</string>
    <string name="ok">确     定</string>
    <string name="cancel">取     消</string>
    <string name="clean">清除文字？</string>
    <string name="camera">相机拍摄</string>
    <string name="phoneGallery">手机相册</string>
    <string name="weiboBody">微博正文</string>
    <string name="refresh">刷新</string>
    <string name="redirect">转发</string>
    <string name="info">资料</string>
    <string name="attention">关注</string>
    <string name="sina_v">新浪认证：</string>
    <string name="intro">介绍：</string>
    <string name="atelse">\@他</string>
    <string name="sendMsg">发私信</string>
    <string name="addToBlacklist">加入黑名单</string>
    <string name="weiboFunction">微博功能</string>
    <string name="weiboFunction2">微博功能</string>
    <string name="checkUserInfo">查看个人资料</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="updateIcon">上传头像</string>
    <string name="nickName">昵称：</string>
    <string name="editInfo">编辑资料</string>
    <string name="from">来自:</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="reply">回复评论</string>
    <string name="del">删除评论</string>
    <string name="viewweibo">查看原微博</string>
    <string name="viewProfile">查看个人资料</string>
    <string name="doYouWantToLoadDraft">发现草稿，是否加载</string>
    <string name="delete">删除</string>
    <string name="picNoSdcard">没有配置sdcard</string>
    <string name="getPicFail">获取图片失败</string>
    <string name="getPicCameraFail">获取照片失败</string>
    <string name="xlistview_header_hint_normal">下拉刷新 </string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">上拉载入更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="weibo_del">删除</string>
    <string name="weibo_del_confirm">确认删除吗？</string>
    <string name="weibo_del_confirm_ok">确     认</string>
    <string name="weibo_del_confirm_cancel">取     消</string>
    <string name="weibo_del_success">删除微博成功</string>
    <string name="weibo_del_fail">删除微博失败</string>
    <string name="user_detail_partone">详细</string>
    <string name="user_detail_parttwo">资料</string>
    <string name="user_weibonum_partone">共</string>
    <string name="user_weibonum_parttwo">条微博</string>
    <string name="user_detail_verify">新浪认证</string>
    <string name="user_detail_verify_info">无</string>
    <string name="user_basic">基本信息</string>
    <string name="user_detail_screenname">昵称</string>
    <string name="user_detail_gender">性别</string>
    <string name="user_detail_loc">所在地</string>
    <string name="user_detail_desc">简介</string>
    <string name="user_detail_blog">博客</string>
    <string name="user_detail_remark">备注</string>
    <string name="user_detail_titlename">用户详细信息</string>
    <string name="user_attention_success">关注成功</string>
    <string name="user_attention_fail">关注失败</string>
    <string name="user_unattention_success">取消关注成功</string>
    <string name="user_unattention_fail">取消关注失败</string>
    <string name="login_tip">您还没有登录，请先到 我的摇摇 中登录微博！</string>
    <string name="repost_title">微博转发列表</string>
    
    <string name="yyprogressdialog_imground_contentdes">数据更新中...</string>
    <string name="ctrl_settiong_unfold">点击展开</string>
    <string name="ctrl_prefecture_area">选择所在地</string>
    <string name="ctrl_prefecture_operator">选择运营商</string>
    <string name="ctrl_advance_poptitle">设备设置</string>
    <string name="ctrl_advance_poplabel1">蓝牙名称：</string>
    <string name="ctrl_advance_poplabel2">配对密码：</string>
    <string name="ctrl_findbt_tip">点击按钮开启手机与摇摇精灵蓝牙配对</string>
    <string name="ctrl_findbt_search">开始搜索</string>
    <string name="ctrl_blindpair_tip">点击按钮开启手机与电视机机顶盒自动匹配, 观察电视机上显示音量增时点击按钮结束匹配</string>
    <string name="ctrl_blindpair_auto">自动匹配</string>
    <string name="ctrl_intelligentpair_tip">点击按钮开始智能学习，根据手机的提示按键依次点按电视机遥控器按钮，直到提示的按钮全部点按完毕</string>
    <string name="ctrl_intelligentpair_start">开始智能学习</string>
        
    <string name="yytv_introduce">首次启动功能介绍\n页面（1）摇摇电视，页面介绍\n页面（2）摇摇电视，页面介绍\n页面（3）摇摇电视，页面介绍</string>
</resources>
