<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="#ffe7cc">
	<!-- titlebar -->
	<include android:id="@+id/userinfo_titlebar" layout="@layout/titlebar" />
	<LinearLayout
	    android:id="@+id/userinfo_verify_layout"
	    android:layout_width="fill_parent" android:layout_height="wrap_content"
	    android:orientation="vertical">
	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/user_detail_verify" android:textColor="#ff000000" android:textSize="20dip"
            android:layout_margin="5dip"/>
	<LinearLayout android:id="@+id/userinfo_verify_layout"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="vertical" android:layout_marginLeft="5dip" android:layout_marginRight="5dip"
		 android:background="@drawable/selfinfo_selet_bg">
		<TextView android:id="@+id/userinfo_verify" style="@style/userinfo_font" android:minHeight="45dip"
		    android:gravity="center_vertical" android:layout_marginLeft="5dip"
			android:text="@string/user_detail_verify_info"/>
	</LinearLayout>
	</LinearLayout>
		<TextView android:textColor="#ff000000" android:textSize="20dip"
		    android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_margin="5dip" android:text="@string/user_basic"/>
	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="vertical" android:layout_marginLeft="5dip" android:layout_marginRight="5dip"
		android:background="@drawable/selfinfo_selet_bg">
		<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:orientation="horizontal" android:minHeight="45dip" android:gravity="center">
			<TextView style="@style/userinfo_font" android:text="@string/user_detail_screenname" 
			    android:textColor="#666699" android:layout_width="fill_parent"
			    android:layout_weight="3.0" android:layout_marginLeft="5dip"/>
			<TextView android:id="@+id/userinfo_screenname" style="@style/userinfo_font"
			    android:layout_weight="1.0" android:layout_width="fill_parent"/>
		</LinearLayout>
		<View android:layout_width="fill_parent" android:layout_height="1px"
                android:background="#ffe0e0e0" />
		<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:orientation="horizontal" android:minHeight="45dip" android:gravity="center">
			<TextView style="@style/userinfo_font" android:text="@string/user_detail_gender"
			    android:textColor="#666699" android:layout_width="fill_parent"
                android:layout_weight="3.0" android:layout_marginLeft="5dip"/>
			<TextView android:id="@+id/userinfo_gender" style="@style/userinfo_font"
			    android:layout_weight="1.0" android:layout_width="fill_parent"/>
		</LinearLayout>
		<View android:layout_width="fill_parent" android:layout_height="1px"
                android:background="#ffe0e0e0" />
		<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:orientation="horizontal" android:minHeight="45dip" android:gravity="center">
			<TextView style="@style/userinfo_font" android:text="@string/user_detail_loc"
			    android:textColor="#666699" android:layout_width="fill_parent"
                android:layout_weight="3.0" android:layout_marginLeft="5dip"/>
			<TextView android:id="@+id/userinfo_loc" style="@style/userinfo_font"
			    android:layout_weight="1.0" android:layout_width="fill_parent"/>
		</LinearLayout>
		<View android:layout_width="fill_parent" android:layout_height="1px"
                android:background="#ffe0e0e0" />
		<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:orientation="horizontal" android:minHeight="45dip" android:gravity="center">
			<TextView style="@style/userinfo_font" android:text="@string/user_detail_desc"
			    android:textColor="#666699" android:layout_width="fill_parent"
                android:layout_weight="3.0" android:layout_marginLeft="5dip"/>
			<TextView android:id="@+id/userinfo_desc" style="@style/userinfo_font"
			    android:layout_weight="1.0" android:layout_width="fill_parent"/>
		</LinearLayout>
		<View android:layout_width="fill_parent" android:layout_height="1px"
                android:background="#ffe0e0e0" />
		<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:orientation="horizontal" android:minHeight="45dip" android:gravity="center">
			<TextView style="@style/userinfo_font" android:text="@string/user_detail_blog"
			    android:textColor="#666699" android:layout_width="fill_parent"
                android:layout_weight="3.0" android:layout_marginLeft="5dip"/>
			<TextView android:id="@+id/userinfo_blog" style="@style/userinfo_font"
			    android:layout_weight="1.0" android:layout_width="fill_parent"/>
		</LinearLayout>
		<View android:layout_width="fill_parent" android:layout_height="1px"
                android:background="#ffe0e0e0" />
		<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:orientation="horizontal" android:minHeight="45dip" android:gravity="center">
			<TextView style="@style/userinfo_font" android:text="@string/user_detail_remark"
			    android:textColor="#666699" android:layout_width="fill_parent"
                android:layout_weight="3.0" android:layout_marginLeft="5dip"/>
			<TextView android:id="@+id/userinfo_remark" style="@style/userinfo_font"
			    android:layout_weight="1.0" android:layout_width="fill_parent"/>
		</LinearLayout>
		
	</LinearLayout>
	
</LinearLayout>