<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"    
    android:orientation="vertical">
    
    <LinearLayout
	    android:layout_width="fill_parent" 
	    android:layout_height="fill_parent"
	    android:layout_weight="1.4"
	    android:background="#b0000000" 
	    android:orientation="vertical">
	</LinearLayout>
	
    <RelativeLayout 
        android:layout_width="fill_parent" 
	    android:layout_height="fill_parent"
	    android:layout_weight="1.1"
	    android:background="#b0000000">
    
	    <LinearLayout
		    android:layout_width="fill_parent" 
		    android:layout_height="fill_parent"	    
		    android:paddingBottom="5dip"
		    android:layout_marginLeft="5dip"
		    android:layout_marginRight="5dip"
		    android:background="@drawable/ctrl_pop_txt_shape" 
		    android:orientation="vertical">
		    
		    <TextView 
		        android:id="@+id/ctrl_advance_poptitle" 
		        android:layout_width="fill_parent" 
		        android:layout_height="wrap_content" 
		        android:gravity="center" 
		        android:textSize="16dip" 
		        android:textColor="#d04509"
		        android:layout_marginTop="5dip" 
		        android:layout_marginLeft="10dip"
		        android:layout_marginRight="10dip"
		        android:background="#fff" 
		        android:text="@string/ctrl_advance_poptitle" />
		    
		    <View
		        android:layout_width="fill_parent"
		        android:layout_height="1dip"
			    android:layout_marginLeft="5dip"
			    android:layout_marginRight="5dip"
			    android:layout_marginTop="5dip"
			    android:background="#ff935e" />
		    
		    <LinearLayout
		        android:orientation="horizontal"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"        
		        android:layout_marginLeft="10dip"
		        android:layout_marginRight="10dip"
		        android:layout_marginTop="10dip">
		        
		        <TextView 
		            android:id="@+id/ctrl_advance_poplabel1"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"            
		            android:gravity="center_vertical"
		            android:textSize="14dip"
		            android:textColor="#000"
		            android:text="@string/ctrl_advance_poplabel1" />
		        
		        <EditText
		            android:id="@+id/ctrl_advance_poptxt1"
		            android:inputType="text"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:layout_marginLeft="5dip"
		            android:gravity="center_vertical"
		            android:background="@drawable/ctrl_pop_txt_shape"
		            android:textColor="#000"
		            android:textSize="14dip" />  
		     </LinearLayout>
		     
		    <LinearLayout
		        android:orientation="horizontal"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:layout_marginLeft="10dip"
		        android:layout_marginRight="10dip"
		        android:layout_marginTop="10dip">
		        
		        <TextView 
		            android:id="@+id/ctrl_advance_poplabel2"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:gravity="center_vertical"
		            android:textColor="#000"
		            android:textSize="14dip"
		            android:text="@string/ctrl_advance_poplabel2" />
		        
		        <EditText
		            android:id="@+id/ctrl_advance_poptxt2"
		            android:inputType="text"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:layout_marginLeft="5dip"
		            android:gravity="center_vertical"
		            android:background="@drawable/ctrl_pop_txt_shape"
		            android:textColor="#000"
		            android:textSize="14dip" /> 
		    </LinearLayout>
		    
		    <LinearLayout
		        android:orientation="horizontal"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:layout_marginLeft="10dip"
		        android:layout_marginRight="10dip"
		        android:layout_marginTop="10dip">
		        
		        <Button
		            android:id="@+id/ctrl_advance_popok"
		            android:background="@drawable/ctrl_pop_button_shape"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:textColor="#fff"
		            android:textSize="14dip"
		            android:text="@string/ok" />
		        
		        <Button
		            android:id="@+id/ctrl_advance_popcancel"
		            android:background="@drawable/ctrl_pop_button_shape"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:layout_marginLeft="5dip"
		            android:textColor="#fff"
		            android:textSize="14dip"
		            android:text="@string/cancel" />	        
		    </LinearLayout>
		</LinearLayout>
	</RelativeLayout>
	
    <LinearLayout
	    android:layout_width="fill_parent" 
	    android:layout_height="fill_parent"
	    android:layout_weight="0.8"
	    android:background="#b0000000" 
	    android:orientation="vertical">
	</LinearLayout>
</LinearLayout>